@@ -43,7 +43,7 @@ public class HospitalService {
         return hospitalRepository.findAll(pageable);
     }
 
-    public Page<Hospital> searchHospitals(String name, String address, int page, int size) {
+    public Page<Hospital> searchHospitals(String name, String address, String departmentName, int page, int size) {
         return getAllHospitals(name, address, page, size);
     }
 
@@ -70,18 +70,17 @@ public class HospitalService {
     }
 
     public List<HospitalDTO> getAllHospitalsWithDepartments() {
-        // Get all hospitals
         List<Hospital> hospitals = hospitalRepository.findAll();
-        // Get all departments
         List<HospitalDepartmentDTO> departments = hospitalDepartmentRepository.findAll()
                 .stream()
                 .map(hospitalDepartmentMapper::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<Long, HospitalDTO> hospitalDTOMap = new HashMap<>();
 
         for (Hospital hospital : hospitals) {
             HospitalDTO dto = convertToDto(hospital);
+            dto.setDepartments(new ArrayList<>()); // departments 필드 초기화
             hospitalDTOMap.put(hospital.getId(), dto);
         }
 
@@ -99,6 +98,8 @@ public class HospitalService {
         return hospitalRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Hospital not found for id :: " + id));
     }
+
+
 
     public List<Hospital> getHospitalByNameContained(String name){
         List<Hospital> hospitals = hospitalRepository.findByNameContains(name);
